tests/contracts/snapshots/workflow_contracts__statistics_report__fallback_log.snap
---
source: tests/contracts/statistics_report.rs
expression: fallback.stdout
---
sccache did not start; no compiler-cache statistics to report.
