tests/contracts/snapshots/workflow_contracts__statistics_report__missing_sccache_log.snap
---
source: tests/contracts/statistics_report.rs
expression: missing.stdout
---
sccache is not installed; no compiler-cache statistics to report.
