tests/contracts/snapshots/workflow_contracts__statistics_report__started_log.snap
---
source: tests/contracts/statistics_report.rs
expression: started.stdout
---
backend: ubicloud
Cache location                  ghac (fake)
