tests/contracts/snapshots/workflow_contracts__statistics_report__started_summary.snap
---
source: tests/contracts/statistics_report.rs
expression: started.summary
---
### sccache statistics (scratch-job)

backend: ubicloud

```text
Cache location                  ghac (fake)
```
